Fix skill item alignment for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@ main {
   min-width: 400px;
   position: relative;
   top: auto;
-  align-self: flex-start;
+  align-self: center;
   justify-content: flex-start; /* Align items left */
 }
 
